<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" 
    android:gravity="center"
    android:orientation="vertical">
    
    <ImageView
        android:src="@drawable/ic_action_bluetooth_searching"
        android:contentDescription="@string/bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp" />
    
    <TextView 
        android:id="@+id/connect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/bt_connect"
        android:textSize="32sp"
        android:clickable="true"
        android:onClick="connect" />
    
    <TextView
        android:id="@+id/startbtgame" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/start_game"
        android:textSize="32sp"
        android:clickable="true"
        android:onClick="StartGame" />

</LinearLayout>
