<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/title_paired_devices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="80dp"
        android:text="@string/paired_devices"
        android:textSize="28sp"
        android:textColor="#53f1ff" />

    <ListView
        android:id="@+id/paired_devices"
        android:layout_width="270dp"
        android:layout_height="100dp"
        android:layout_below="@id/title_paired_devices"
        android:layout_marginLeft="25dp"
        android:fadingEdge="none"
        android:stackFromBottom="false" />

    <TextView
        android:id="@+id/title_new_devices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/paired_devices"
        android:layout_marginLeft="25dp"
        android:text="@string/found_devices"
        android:textSize="28sp"
        android:textColor="#53f1ff" />

    <ListView
        android:id="@+id/new_devices"
        android:layout_width="270dp"
        android:layout_height="150dp"
        android:layout_below="@id/title_new_devices"
        android:layout_marginLeft="25dp"
        android:fadingEdge="none"
        android:stackFromBottom="false" />

    <TextView
        android:id="@+id/button_scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/new_devices"
        android:text="@string/scan"
        android:textSize="42sp"
        android:layout_centerHorizontal="true" />

</RelativeLayout>